syntax = "proto3";

// Package declaration, for non-java implementations
package brabocoin;

// Java package destination for generated classes
option java_package = "org.brabocoin.brabocoin.proto.model";
option java_outer_classname = "BrabocoinProtos";

message Hash {
    bytes value = 1;
}

message Signature {
    bytes r = 1;
    bytes s = 2;
    bytes publicKey = 3;
}

message BlockChain {

}

message Output {
    Hash address = 1;
    int64 amount = 2;
}

message Input {
    Signature signature = 1;
    Hash referencedTransaction = 2;
    int32 referencedOutputIndex = 3;
}

message Transaction {
    repeated Input inputs = 1;
    repeated Output outputs = 2;
}

message Block {
    int32 networkId = 1;
    Hash previousBlockHash = 2;
    Hash merkleRoot = 3;
    Hash targetValue = 4;
    bytes nonce = 5;
    int32 blockHeight = 6;
    repeated Transaction transactions = 7;
}

message HandshakeRequest {
    int32 servicePort = 1;
}
message HandshakeResponse {
    repeated string peers = 1;
}

message BlockHeight {
    int32 height = 1;
}

message ChainCompatibility {
    bool compatible = 1;
}
